--- a/MVC-Project/Views/Shared/Components/Header/Default.cshtml
+++ b/MVC-Project/Views/Shared/Components/Header/Default.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model HeaderVM
 
 
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
@@ -13,16 +13,68 @@
             <a href="index.html" class="nav-item nav-link active">Home</a>
             <a href="about.html" class="nav-item nav-link">About</a>
             <a href="courses.html" class="nav-item nav-link">Courses</a>
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                <div class="dropdown-menu fade-down m-0">
-                    <a href="team.html" class="dropdown-item">Our Team</a>
-                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                    <a href="404.html" class="dropdown-item">404 Page</a>
+            <a href="contact.html" class="nav-item nav-link">Contact</a>
+            @if (!User.Identity.IsAuthenticated)
+            {
+                <a asp-controller="Account" asp-action="Register" class="nav-item nav-link">Register</a>
+            }
+            else
+            {
+                    <span>Welcome</span>
+            }
+
+        </div>
+        <!-- Button trigger modal -->
+        @if (!User.Identity.IsAuthenticated)
+        {
+            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary" data-mdb-modal-init data-mdb-target="#staticBackdrop1">
+                Login
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="staticBackdrop1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+                <div class="modal-dialog d-flex justify-content-center">
+                    <div class="modal-content w-75">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel1">Sign in</h5>
+                            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-4">
+                            <form asp-action="Login">
+                                <!-- Email input -->
+                                <div data-mdb-input-init class="form-outline mb-4">
+                                    <input type="email" asp-for="@Model.UserLogin.Email" class="form-control" />
+                                    <label class="form-label" asp-for="@Model.UserLogin.Email">Email address</label>
+                                    <span asp-validation-for="@Model.UserLogin.Email" class="text-danger"></span>
+                                </div>
+
+                                <!-- password input -->
+                                <div data-mdb-input-init class="form-outline mb-4">
+                                    <input type="password" asp-for="@Model.UserLogin.Password" class="form-control" />
+                                    <label class="form-label" asp-for="@Model.UserLogin.Password">Password</label>
+                                    <span asp-validation-for="@Model.UserLogin.Password" class="text-danger"></span>
+                                </div>
+
+                                <div class="form-group">
+                                    <input asp-for="@Model.UserLogin.RememberMe" />
+                                    <label asp-for="@Model.UserLogin.RememberMe"></label>
+                                </div>
+
+                                <!-- Submit button -->
+                                <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block">Login</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <a href="contact.html" class="nav-item nav-link">Contact</a>
-        </div>
-        <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
+        }
+        else
+        {
+            <form method="post" asp-controller="Account" asp-action="Logout">
+                <button type="submit">Logout</button>
+            </form>
+        }
+
+        <!-- Modal -->
     </div>
 </nav>
