--- a/MVC-Project/Views/Shared/_Layout.cshtml
+++ b/MVC-Project/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
     </div>
     <!-- Spinner End -->
     <!-- Navbar Start -->
+    @await Component.InvokeAsync("Header")
 
     <!-- Navbar End -->
     @RenderBody()
