--- a/MVC-Project/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVC-Project/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -272,9 +272,9 @@
                                     </a>
                                     <ul class="pcoded-submenu">
                                         <li class=" ">
-                                            <a href="accordion.html" class="waves-effect waves-dark">
+                                            <a asp-controller="Slider" asp-action="Index" class="waves-effect waves-dark">
                                                 <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                                                <span class="pcoded-mtext" data-i18n="nav.basic-components.alert">Accordion</span>
+                                                <span class="pcoded-mtext" data-i18n="nav.basic-components.alert">Slider</span>
                                                 <span class="pcoded-mcaret"></span>
                                             </a>
                                         </li>
