--- a/MVC-Project/Areas/Admin/Views/_ViewImports.cshtml
+++ b/MVC-Project/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@namespace MVC_Project.Areas.Admin.Views
+@using MVC_Project.ViewModels.Slider
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
