--- a/MVC-Project/Views/Account/Register.cshtml
+++ b/MVC-Project/Views/Account/Register.cshtml
@@ -11,7 +11,7 @@
 
                                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-                                <form asp-action="Register" class="mx-1 mx-md-4">
+                                <form asp-action="Register" method="post" class="mx-1 mx-md-4">
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
