--- a/MVC-Project/Views/_ViewImports.cshtml
+++ b/MVC-Project/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
 ﻿@using MVC_Project
 @using MVC_Project.ViewModels.Account
 @using MVC_Project.ViewComponents
-
+@using MVC_Project.ViewModels.Slider
 @using MVC_Project.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
