--- a/MVC-Project/Areas/Admin/Views/Slider/Index.cshtml
+++ b/MVC-Project/Areas/Admin/Views/Slider/Index.cshtml
@@ -3,7 +3,7 @@
 
 <div class="card">
     <div class="card-header text-center">
-        <h1>Categories</h1>
+        <h1>Sliders</h1>
     </div>
     <div class="card-block table-border-style">
         <div class="table-responsive">
@@ -24,17 +24,18 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @*@foreach (var item in Model)
+                    @foreach (var item in Model)
                     {
+
                         <tr class="category-data">
                             <td>@item.Title</td>
-                            <td>@item.Description</td>
-                            <td>@item.Image</td>
+                            <td>@item.Description.ToString().Truncate(20)</td>
+                            <td><img src="~/img/@item.Image" width="250px" height="200px"/></td>
                             <td>
-                                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning text-white btn-sm"><i class="ti-settings"></i></a>
+                                <a asp-controller="Slider" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning text-white btn-sm"><i class="ti-settings"></i></a>
                                 <form class="d-inline" method="post" asp-action="Delete" asp-route-id="@item.Id"><button type="submit" class="btn btn-danger text-white btn-sm"><i class="ti-trash"></i></button></form>
                             </td>
                         </tr>
-                    }*@
+                    }
                 </tbody>
             </table>
