--- a/MVC-Project/Areas/Admin/Views/_ViewImports.cshtml
+++ b/MVC-Project/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@namespace MVC_Project.Areas.Admin.Views
 @using MVC_Project.ViewModels.Slider
+@using MVC_Project.Helpers.Extentions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
