--- a/MVC-Project/Views/Shared/Components/Carousel/Default.cshtml
+++ b/MVC-Project/Views/Shared/Components/Carousel/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SliderHomeVM>
+﻿@model IEnumerable<SliderVM>
 
 <div class="container-fluid p-0 mb-5">
     <div class="owl-carousel header-carousel position-relative">
