--- a/MVC-Project/Views/Shared/Components/About/Default.cshtml
+++ b/MVC-Project/Views/Shared/Components/About/Default.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container-xxl py-5">
+﻿@model IEnumerable<AboutVM>
+
+<div class="container-xxl py-5">
     <div class="container">
         <div class="row g-5">
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
