--- a/MVC-Project/Views/_ViewImports.cshtml
+++ b/MVC-Project/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using MVC_Project
 @using MVC_Project.ViewModels.Account
+@using MVC_Project.ViewModels.About
 @using MVC_Project.ViewModels.Information
 @using MVC_Project.ViewComponents
 @using MVC_Project.ViewModels.Slider
