--- a/MVC-Project/Areas/Admin/Views/About/Index.cshtml
+++ b/MVC-Project/Areas/Admin/Views/About/Index.cshtml
@@ -32,10 +32,10 @@
                             <td>@item.Descripntion.ToString().Truncate(20)</td>
                             <td><img src="~/img/@item.Image" width="250px" height="200px" /></td>
                             <td>
-                                <a asp-controller="Slider" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning text-white btn-sm"><i class="ti-settings"></i></a>
+                                <a asp-controller="About" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning text-white btn-sm"><i class="ti-settings"></i></a>
                                 @if (User.IsInRole("SuperAdmin"))
                                 {
-                                    <form class="d-inline" method="post" asp-action="Delete" asp-route-id="@item.Id"><button type="submit" class="btn btn-danger text-white btn-sm"><i class="ti-trash"></i></button></form>
+                                    <form class="d-inline" method="post" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id"><button type="submit" class="btn btn-danger text-white btn-sm"><i class="ti-trash"></i></button></form>
 
                                 }
                             </td>
