--- a/MVC-Project/Views/Home/Index.cshtml
+++ b/MVC-Project/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 @await Component.InvokeAsync("Carousel")
 @await Component.InvokeAsync("Information")
-
+@await Component.InvokeAsync("About")
 
 
 
