edit methods ready

--- a/MVC-Project/Areas/Admin/Views/_ViewImports.cshtml
+++ b/MVC-Project/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@namespace MVC_Project.Areas.Admin.Views
 @using MVC_Project.ViewModels.Slider
+@using MVC_Project.ViewModels.Category
 @using MVC_Project.ViewModels.Information
 @using MVC_Project.ViewModels.About
 @using MVC_Project.Helpers.Extentions
