--- a/MVC-Project/Views/_ViewImports.cshtml
+++ b/MVC-Project/Views/_ViewImports.cshtml
@@ -4,6 +4,8 @@
 @using MVC_Project.ViewModels.Information
 @using MVC_Project.ViewComponents
 @using MVC_Project.ViewModels.Slider
+@using MVC_Project.ViewModels.Category
+
 @using MVC_Project.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
