--- a/MVC-Project/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVC-Project/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -293,9 +293,9 @@
                                             </a>
                                         </li>
                                         <li class=" ">
-                                            <a href="tabs.html" class="waves-effect waves-dark">
+                                            <a asp-controller="Category" asp-action="Index" class="waves-effect waves-dark">
                                                 <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                                                <span class="pcoded-mtext" data-i18n="nav.basic-components.breadcrumbs">Tabs</span>
+                                                <span class="pcoded-mtext" data-i18n="nav.basic-components.breadcrumbs">Category</span>
                                                 <span class="pcoded-mcaret"></span>
                                             </a>
                                         </li>
