--- a/MVC-Project/Areas/Admin/Views/_ViewImports.cshtml
+++ b/MVC-Project/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,6 +2,9 @@
 @using MVC_Project.ViewModels.Slider
 @using MVC_Project.ViewModels.Category
 @using MVC_Project.ViewModels.Information
+@using MVC_Project.ViewModels.Setting
+@using MVC_Project.ViewModels.Social
+
 @using MVC_Project.ViewModels.About
 @using MVC_Project.Helpers.Extentions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
