--- a/MVC-Project/Views/Shared/Components/Footer/Default.cshtml
+++ b/MVC-Project/Views/Shared/Components/Footer/Default.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model FooterVM
 
 
 
@@ -15,14 +15,14 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-white mb-3">Contact</h4>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>@Model.Settings["Address"]</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>@Model.Settings["Phone"]</p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>@Model.Settings["Email"]</p>
                 <div class="d-flex pt-2">
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="@Model.Settings["Twitter"]"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="@Model.Settings["Facebook"]"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="@Model.Settings["Youtube"]"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="@Model.Settings["Linkedin"]"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
