--- a/MVC-Project/Views/Shared/Components/Header/Default.cshtml
+++ b/MVC-Project/Views/Shared/Components/Header/Default.cshtml
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
     <div class="container">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>eLEARNING</h2>
+            <h2 class="m-0 text-primary"><i class="@Model.Settings["Logo"]"></i>@Model.Settings["Navbar-Name"]</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
