--- a/MVC-Project/Views/Shared/_Layout.cshtml
+++ b/MVC-Project/Views/Shared/_Layout.cshtml
@@ -45,7 +45,8 @@
     <!-- Navbar End -->
     @RenderBody()
     <!-- Footer Start -->
-  
+    @await Component.InvokeAsync("Footer")
+
     <!-- Footer End -->
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
