--- a/MVC-Project/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVC-Project/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -307,16 +307,16 @@
                                             </a>
                                         </li>
                                         <li class=" ">
-                                            <a href="label-badge.html" class="waves-effect waves-dark">
+                                            <a asp-controller="Course" asp-action="Index" class="waves-effect waves-dark">
                                                 <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                                                <span class="pcoded-mtext" data-i18n="nav.basic-components.breadcrumbs">Label Badge</span>
+                                                <span class="pcoded-mtext" data-i18n="nav.basic-components.breadcrumbs">Course</span>
                                                 <span class="pcoded-mcaret"></span>
                                             </a>
                                         </li>
                                         <li class=" ">
-                                            <a href="tooltip.html" class="waves-effect waves-dark">
+                                            <a asp-controller="Instructor" asp-action="Index"  class="waves-effect waves-dark">
                                                 <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                                                <span class="pcoded-mtext" data-i18n="nav.basic-components.alert">Tooltip</span>
+                                                <span class="pcoded-mtext" data-i18n="nav.basic-components.alert">Instructor</span>
                                                 <span class="pcoded-mcaret"></span>
                                             </a>
                                         </li>
@@ -367,9 +367,9 @@
                             <div class="pcoded-navigation-label" data-i18n="nav.category.forms">Chart &amp; Maps</div>
                             <ul class="pcoded-item pcoded-left-item">
                                 <li>
-                                    <a href="chart.html" class="waves-effect waves-dark">
+                                    <a asp-area="Admin" asp-controller="Instructor" asp-action="Index" class="waves-effect waves-dark">
                                         <span class="pcoded-micon"><i class="ti-layers"></i><b>FC</b></span>
-                                        <span class="pcoded-mtext" data-i18n="nav.form-components.main">Chart</span>
+                                        <span class="pcoded-mtext" data-i18n="nav.form-components.main">Instructor</span>
                                         <span class="pcoded-mcaret"></span>
                                     </a>
                                 </li>
