--- a/MVC-Project/Areas/Admin/Views/_ViewImports.cshtml
+++ b/MVC-Project/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,6 +4,8 @@
 @using MVC_Project.ViewModels.Information
 @using MVC_Project.ViewModels.Setting
 @using MVC_Project.ViewModels.Social
+@using MVC_Project.ViewModels.Course
+@using MVC_Project.ViewModels.Instructor
 
 @using MVC_Project.ViewModels.About
 @using MVC_Project.Helpers.Extentions
