--- a/MVC-Project/Areas/Admin/Views/Course/Edit.cshtml
+++ b/MVC-Project/Areas/Admin/Views/Course/Edit.cshtml
@@ -1,6 +1,68 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model CourseEditVM
+
 @{
+    ViewData["Title"] = "Edit Course";
 }
+
+<h1>Edit Course</h1>
+
+<div class="form-group row">
+    <form method="post" enctype="multipart/form-data">
+
+        <div class="col-sm-10">
+            <label>Course Name</label>
+            <input asp-for="CourseName" class="form-control form-control-round">
+            <span asp-validation-for="CourseName" class="text-danger"></span>
+        </div>
+
+        <div class="col-sm-10">
+            <label>Category</label>
+            <select asp-for="CategoryId" asp-items="@ViewBag.categories" class="form-control form-control-round"></select>
+            <span asp-validation-for="CategoryId" class="text-danger"></span>
+        </div>
+
+        <div class="col-sm-10">
+            <label>Duration (in hours)</label>
+            <input asp-for="Duration" class="form-control form-control-round">
+            <span asp-validation-for="Duration" class="text-danger"></span>
+        </div>
+
+        <div class="col-sm-10">
+            <label>Instructor</label>
+            <input asp-for="Instructor" class="form-control form-control-round">
+            <span asp-validation-for="Instructor" class="text-danger"></span>
+        </div>
+
+        <div class="col-sm-10">
+            <label>Price</label>
+            <input asp-for="Price" class="form-control form-control-round">
+            <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+
+        <div class="col-sm-10">
+            <label>Rating</label>
+            <input asp-for="Rating" class="form-control form-control-round">
+            <span asp-validation-for="Rating" class="text-danger"></span>
+        </div>
+
+        <div class="col-sm-10">
+            <label>Current Images</label><br>
+            @foreach (var imagePath in Model.CurrentImages)
+            {
+                <img src="~/img/@imagePath" alt="Course Image" class="img-thumbnail" width="300" height="300" />
+            }
+        </div>
+
+        <div class="col-sm-10">
+            <label>New Images</label>
+            <input asp-for="NewImage" type="file" multiple class="form-control form-control-round">
+            <span asp-validation-for="NewImage" class="text-danger"></span>
+        </div>
+
+        <div class="buttons mt-5">
+            <button type="submit" class="btn btn-primary mr-2">Save</button>
+            <a asp-action="Index" class="btn btn-light">Cancel</a>
+        </div>
+    </form>
+</div>
 
