--- a/MVC-Project/Areas/Admin/Views/Course/Index.cshtml
+++ b/MVC-Project/Areas/Admin/Views/Course/Index.cshtml
@@ -22,7 +22,7 @@
                     @foreach (var item in Model)
                     {
                         <tr class="category-data">
-                            <td>@item.CategoryName</td>
+                            <td>@item.CourseName</td>
                             <td>@item.CategoryName</td>
                             <td>@item.Price</td>
                             <td>@item.MainImage</td>
