--- a/MVC-Project/Views/Home/Index.cshtml
+++ b/MVC-Project/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 @await Component.InvokeAsync("Carousel")
 @await Component.InvokeAsync("Information")
 @await Component.InvokeAsync("About")
+@await Component.InvokeAsync("Categories")
 
 
 
